generators/app/templates/packages/backend/cloudformation/vpc.yml
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      Tags:
        - Key: "Name"
          Value: "#{AWS::StackName}"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: "10.0.0.0/16"

  # public subnet
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      Tags:
        - Key: Name
          Value: "#{AWS::StackName} Public"
      VpcId:
        Ref: VPC
      AvailabilityZone: "#{AWS::Region}a"
      CidrBlock: "10.0.3.0/24"
      MapPublicIpOnLaunch: true
  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      Tags:
        - Key: Name
          Value: "#{AWS::StackName} Public"
      VpcId:
        Ref: VPC
      AvailabilityZone: "#{AWS::Region}b"
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: true
  PublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      Tags:
        - Key: Name
          Value: "#{AWS::StackName} Public"
      VpcId:
        Ref: VPC
      AvailabilityZone: "#{AWS::Region}c"
      CidrBlock: "10.0.2.0/24"
      MapPublicIpOnLaunch: true
  PublicSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "NAT-ed"
      SubnetIds:
      - Ref: PublicSubnetA
      - Ref: PublicSubnetB
      - Ref: PublicSubnetC

  # route public subnet to IGW
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "#{AWS::StackName} Public"
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
  PublicARouteTableAssociation:  # link public subnets to PublicRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetA
  PublicBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetB
  PublicCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetC

  # internet gateway
  IGW:  # Internet GateWay
    Type: AWS::EC2::InternetGateway
  IGWAttachment:  # Connect IGW to our VPC
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC

  # SSH for bastion
  BastionSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: '#{AWS::StackName}'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: '0.0.0.0/0'
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: '0.0.0.0/0'
      Tags:
      - Key: Name
        Value: '#{AWS::StackName}-BastionSecurityGroup'


  # LAMBDA VPC STUFF
  ServerlessSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      Tags:
        - Key: Name
          Value: "#{AWS::StackName} Lambda"
      VpcId:
        Ref: VPC
      AvailabilityZone: "#{AWS::Region}a"
      CidrBlock: "10.0.10.0/24"
  ServerlessSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      Tags:
        - Key: Name
          Value: "#{AWS::StackName} Lambda"
      VpcId:
        Ref: VPC
      AvailabilityZone: "#{AWS::Region}b"
      CidrBlock: "10.0.11.0/24"
  ServerlessSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      Tags:
        - Key: Name
          Value: "#{AWS::StackName} Lambda"
      VpcId:
        Ref: VPC
      AvailabilityZone: "#{AWS::Region}c"
      CidrBlock: "10.0.12.0/24"

  NATIP:  # IP for public NAT
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NatGatewayA:  # NAT GW in public subnet
    # technically there should be three of these in case AZ "A" fails
    Type: AWS::EC2::NatGateway
    DependsOn:
      - NATIP
    Properties:
      AllocationId: !GetAtt NATIP.AllocationId
      SubnetId: !Ref PublicSubnetA
  PrivateRouteTable:  # Route table for internal routing
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "#{AWS::StackName} Private"
  DefaultPrivateRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - NatGatewayA
      - PrivateRouteTable
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA
  SubARouteTableAssociation:  # link private subnets to PrivateRouteTable
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref ServerlessSubnetA
  SubBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref ServerlessSubnetB
  SubCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref ServerlessSubnetC

  ServerlessPrivateSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "NAT-ed"
      SubnetIds:
      - Ref: ServerlessSubnetA
      - Ref: ServerlessSubnetB
      - Ref: ServerlessSubnetC

  ServerlessSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for Serverless Functions
      VpcId: !Ref VPC
